--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "moment": "^2.29.3",
+    "mongoose": "^6.13.5",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
